--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,106 +1,106 @@
 /* import fonts */
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap");
 
 body {
-    font-family: 'Oswald', sans-serif;
-    background-color: #C3EDC0;
-    color: #333;
-    font-size: 16px;
-    line-height: 1.5;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    justify-content: space-around;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+  font-family: "Oswald", sans-serif;
+  background-color: #c3edc0;
+  color: #333;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
-.header h1{
-    margin: 0;
+.header h1 {
+  margin: 0;
 }
 .header {
-    width: auto;
-    scale: 300%;
-    position: relative;
-    margin: 24rem 0;
+  width: auto;
+  scale: 300%;
+  position: relative;
+  margin: 24rem 0;
 }
 .btn_container {
-    margin: 0 0 5rem 0;
+  margin: 0 0 5rem 0;
 }
-.movedown_btn{
-    border: none;
-    background-color: transparent;
-}
-
-.movedown_btn i{
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    font-size:  48px;
-    transition: all 0.2s ease-in-out;
+.movedown_btn {
+  border: none;
+  background-color: transparent;
 }
 
-.movedown_btn i:hover{
-    color: #fff;
-    transform: scale(1.5);
+.movedown_btn i {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 48px;
+  transition: all 0.2s ease-in-out;
+}
 
+.movedown_btn i:hover {
+  color: #fff;
+  transform: scale(1.5);
 }
 
 .input {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 5rem 0 2.5rem 0;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 5rem 0 2.5rem 0;
 }
 .input .uploadbtn {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 20px 60px;
-    border-radius: 12px;
-    cursor: pointer;
-    font-size: 24px;
-    font-weight: 700;
-    margin: 5rem 0 0 0;
-    width: auto;
-    transition: all 0.3s ease-in-out;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 20px 60px;
+  border-radius: 12px;
+  cursor: pointer;
+  font-size: 24px;
+  font-weight: 700;
+  margin: 5rem 0 0 0;
+  width: auto;
+  transition: all 0.3s ease-in-out;
 }
 .input .uploadbtn:hover {
-    background-color: #fff;
-    color: #333;
-    border: 1px solid #333;
+  background-color: #fff;
+  color: #333;
+  border: 1px solid #333;
 }
-.input .btn_container{
-    align-items: center;
+.input .btn_container {
+  align-items: center;
 }
 
 .input #fileinput {
-    display: none;
+  display: none;
 }
 
 .result {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 0 0 5rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0 0 5rem 0;
+  align-items: center;
 }
 .result img {
-    width: 224px;
-    height: 224px;
-    object-fit: cover;
-    border-radius: 12px;
-    margin: 0 0 6rem 0;
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 12px;
+  margin: 0 0 6rem 0;
 }
 
 .result .text {
-    font-size: 24px;
-    font-weight: 700;
-    margin: 0 0 1rem 0;
+  font-size: 24px;
+  font-weight: 700;
+  margin: 0 0 1rem 0;
 }
 footer {
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
